--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,56 @@
 <resources>
-    <string name="app_name">"Qrib"</string>
+    <string name="app_name">Qrib</string>
+    <string name="hello_world">Hello world!</string>
+
+    <!-- Menu. -->
+    <string name="action_update_location">Update Location</string>
+
+    <!-- Image content description default. -->
+    <string name="photo_description">Photos</string>
+    <string name="vote_button">Vote</string>
+    <string name="empty_view">Empty View</string>
+
+    <!-- Text hint. -->
+    <string name="content_hint">What\'s happening?</string>
+
+    <!-- Sync adapter. -->
+    <string name="sync_account_type" translatable="false">in.lovelacetech.makassarreport</string>
+    <string name="content_authority" translatable="false">in.lovelacetech.makassarreport</string>
+
+    <!-- Dialog. -->
+    <string name="dialog_confirm">Are You Sure?</string>
+    <string name="dialog_positive">Yes</string>
+    <string name="dialog_negative">No</string>
+    <string name="dialog_ok">OK</string>
+
+    <!-- Location Dialog. -->
+    <string name="request_location_dialog">This activity requires Your location. Please enable Your location</string>
+    <string name="location_settings">Go to settings</string>
+    <string name="location_cancel">Cancel</string>
+    <string name="location_not_available">Location is not available. Please try again later</string>
+
+    <!-- Location. -->
+    <string name="title_location">Map</string>
+    <string name="set_location">Location Setting</string>
+    <string name="action_location_ok">Location Set</string>
+
+    <!-- Detail Action-->
+    <string name="action_delete">Delete</string>
+    <string name="action_edit">Edit</string>
+
+    <!-- Preferences -->
+    <string name="user_status" translateable="false">user-status</string>
+
+    <!-- Permission -->
+    <string name="permission_location_rationale">Location permission is needed to get your current location.</string>
+    <string name="location_permission_granted">Location permission granted!</string>
+    <string name="location_permission_not_granted">Location permission not granted!</string>
+    <string name="camera_permission_not_granted">Camera permission is not granted</string>
+
+    <!-- Nav Menu-->
+    <string name="nearby_people">Nearby People</string>
+    <string name="sub_item">Other</string>
+    <string name="my_map">My Map</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_sign_out">Log Out</string>
 </resources>
